--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,11 @@ dependencies:
   flutter_svg: ^2.0.9
   flutter_flip_card: ^0.0.4
   amplify_datastore: ^1.6.0
+  freezed: ^2.4.5
+  freezed_annotation: ^2.4.1
+  flutter_animate: ^4.3.0
+  sliding_up_panel: ^2.0.0+1
+  flutter_quill: ^8.6.4
 
 dev_dependencies:
   flutter_test:
@@ -58,6 +63,8 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^3.0.1
+  build_runner: ^2.4.7
+  json_serializable: ^6.7.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -72,13 +79,17 @@ flutter:
 
   assets:
     - assets/images/
+    - assets/data/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/assets-and-images/#from-packages
-
+  fonts:
+    - family: Tangerine
+      fonts:
+        - asset: assets/fonts/Tangerine-Bold.ttf
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
