--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,6 @@ dependencies:
   get_it: ^7.6.4
   file_picker: ^6.1.1
   xml: ^6.3.0
-  table_calendar: ^3.0.9
   flutter_easyloading: ^3.0.5
   amplify_api: ^1.6.1
   amplify_flutter: ^1.6.0
@@ -47,11 +46,18 @@ dependencies:
   flutter_svg: ^2.0.9
   flutter_flip_card: ^0.0.4
   amplify_datastore: ^1.6.0
-  freezed: ^2.4.5
-  freezed_annotation: ^2.4.1
   flutter_animate: ^4.3.0
-  sliding_up_panel: ^2.0.0+1
   flutter_quill: ^8.6.4
+  hive: ^2.2.3
+  path_provider: ^2.1.1
+  hive_flutter: ^1.1.0
+  pdfx:
+    git:
+      url: https://github.com/ScerIO/packages.flutter.git
+      ref: main
+      path: packages/pdfx/
+  responsive_framework: ^1.1.1
+  flutter_staggered_grid_view: ^0.7.0
 
 dev_dependencies:
   flutter_test:
@@ -87,9 +93,9 @@ flutter:
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/assets-and-images/#from-packages
   fonts:
-    - family: Tangerine
+    - family: Trajan Pro
       fonts:
-        - asset: assets/fonts/Tangerine-Bold.ttf
+       - asset: assets/fonts/TrajanProRegular.ttf
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
