--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,7 @@ dependencies:
       path: packages/pdfx/
   responsive_framework: ^1.1.1
   flutter_staggered_grid_view: ^0.7.0
+  flutter_typeahead: ^5.0.1
 
 dev_dependencies:
   flutter_test:
