--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,10 +16,10 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+1
+version: 0.9.76+1
 
 environment:
-  sdk: '>=3.2.0 <4.0.0'
+  sdk: '>=3.3.0 <4.0.0'
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -35,31 +35,32 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
-  get_it: ^7.6.4
+  get_it: ^8.0.0
   file_picker: ^6.1.1
-  xml: ^6.3.0
+  xml: ^6.5.0
   flutter_easyloading: ^3.0.5
-  amplify_api: ^1.6.1
-  amplify_flutter: ^1.6.0
-  amplify_auth_cognito: ^1.6.0
-  shared_preferences: ^2.2.2
+  amplify_api: ^2.4.1
+  amplify_flutter: ^2.4.1
+  amplify_auth_cognito: ^2.4.1
+  shared_preferences: ^2.3.2
   flutter_svg: ^2.0.9
-  flutter_flip_card: ^0.0.4
-  amplify_datastore: ^1.6.0
-  flutter_animate: ^4.3.0
-  flutter_quill: ^8.6.4
+  flutter_flip_card: ^0.0.6
+  amplify_datastore: ^2.4.1
+  flutter_animate: ^4.5.0
+  flutter_quill: ^9.6.0
   hive: ^2.2.3
-  path_provider: ^2.1.1
+  path_provider: ^2.1.4
   hive_flutter: ^1.1.0
-  pdfx:
-    git:
-      url: https://github.com/ScerIO/packages.flutter.git
-      ref: main
-      path: packages/pdfx/
-  responsive_framework: ^1.1.1
+  responsive_framework: ^1.5.1
   flutter_staggered_grid_view: ^0.7.0
   flutter_typeahead: ^5.0.1
   collection: ^1.18.0
+  drift: ^2.18.0
+  pdfx:
+    git:
+      url: https://github.com/figengungor/packages.flutter.git
+      ref: main
+      path: packages/pdfx/
 
 dev_dependencies:
   flutter_test:
